Images perfectly centered in each card

--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,7 @@
     <title>Shoes Data Business</title>
       <!-- Link to the latest Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link rel="icon" href="/favicon.ico">
 
   <!-- Link to Font Awesome for icons -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
@@ -41,7 +42,9 @@
 
 
     <!-- Link to your custom CSS files -->
-  <link rel="stylesheet" href="css/viewFeaturedBikes.css">
+  <link rel="stylesheet" href="css/viewFeaturedShoes.css">
+  <link rel="stylesheet" href="css/style.css">
+
   
 
     <!--Link to Slick Carousel CSS for additional carousel options -->
@@ -57,12 +60,12 @@
   <main> 
     <div class="shoes-container py-6">
       <!-- Section title with anchor link -->
-      <a href="#section-bike" class="link-button" data-aos="zoom-in-up">
-        <h1 id="section-bike">Get the Right Shoes for You!</h1>
+      <a href="#section-shoes" class="link-button" data-aos="zoom-in-up">
+        <h1 id="section-shoes">Get the Right Shoes for You!</h1>
       </a>
       <!-- START OF Shoes "Best TRIPS WITH OUR BEST SHOES" CON -->
       <section class="container pt-6 pb-4" data-aos="zoom-in-down">
-        <div id="bike-type-container">
+        <div id="shoes-type-container">
           <h2 class="mb-4 main-heading text-center">Best Shoes FOR YOU</h2>
           <div class="row">
           </div>
@@ -81,16 +84,16 @@
         <div class="model-content">
 
           <!-- view shoes filter  -->
-          <div class="filters">
+          <!-- <div class="filters">
             <label for="category-filter">Category:</label>
             <select id="category-filter">
               <option value="all">All</option>
               <option value="running">Running</option>
               <option value="casual">Casual</option>
               <option value="formal">Formal</option>
-            </select>
+            </select> -->
             <!--  -->
-            
+<!--             
             <label for="price-filter">Price Range:</label>
             <select id="price-filter">
               <option value="all">All</option>
@@ -99,7 +102,7 @@
               <option value="101-200">$101 - $200</option>
               <option value="201+">$201+</option>
             </select>
-          </div>
+          </div> -->
           <!-- View shoes filter -->
 
           <!-- View shoes list -->
@@ -115,7 +118,7 @@
    <!-- START OF FOOTER -->
   <!-- creates a footer for the webpage. The footer contains three parts:-->
 
-  
+
 
       <!-- Link to Bootstrap scripts -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
